# py-trading

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtest/: __init__.py  benchmarks.py  data_prep.py  experiments.py  metrics.py  validators.py  vectorized.py
configs/: __init__.py  base.yaml  loader.py
data/: __init__.py  asof_api.py  clock.py  maintenance.py  normalize.py  quality.py  sp500_constituents.csv  storage.py  universe.py  universe_registry.py
data/vendors/: __init__.py  base.py  finnhub.py  tiingo.py  yahoo.py
features/: __init__.py  calendar.py  cross_sectional.py  fundamentals.py  intrinsic_value.py  microstructure.py  options.py  pipeline.py  regime_metrics.py  scaling.py  sentiment.py  technical.py
labels/: __init__.py  regimes.py  returns.py  triple_barrier.py
live/: __init__.py  alerting.py  alpaca_broker.py  broker_base.py  engine.py  paper_broker.py  tradability.py
models/: __init__.py  base.py  baselines.py  monitoring.py  splits.py  tabular.py  tabular_trainer.py  training.py  types.py  versioning.py
models/torch/: __init__.py  conv_lstm.py  dataset.py  losses.py  tcn.py  transformer.py
portfolio/: __init__.py  costs.py  risk.py  scores.py  strategies.py
scripts/: analyze_regime_performance.py  build_universe.py  check_live_readiness.py  com.pyfinance.daily-trading.plist  cron_daily_trading.sh  cron_weekly_backtest.sh  ensure_data_coverage.py  fetch_sp500_history.py  generate_performance_report.py  get_recommendations.py  ingest_bars.py  refresh_universe_membership.py  run_backtest.py  run_live_loop.py  run_multi_horizon_backtest.py  run_recent_reports.py  simulate_daily_trading.py  smoke_test_broker.py  validate_point_in_time.py
tests/: test_pit_validation.py  test_smoke.py  test_training.py
